--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/finalpro
-spring.datasource.username=root
-spring.datasource.password=password
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=jdbc:mysql://localhost:3306/finalpro
+#spring.datasource.username=root
+#spring.datasource.password=password
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=create
 
 #cloud.name=mel
 #cloud.secret=-_VKKl4-GuUoPUoI6PIZgvNMjFU
